# SalesMatrix

./: README.md  pyproject.toml
core/: settings.py
src/categorias/: models.py
src/categorias/migrations/: 0001_initial.py
src/core/: settings.py
src/produtos/: models.py
src/produtos/migrations/: 0001_initial.py
src/segmentos/: apps.py  models.py
src/segmentos/migrations/: 0001_initial.py
vendedores/: apps.py
