[project]
name = "salesmatrix"
version = "0.1.0"
description = "Para demonstrar as minhas habilidades a recrutadores e clientes, o projeto ideal é uma Plataforma Inteligente de Gestão e Predição de Vendas. Este projeto integra o ciclo completo: coleta de dados (Django), armazenamento robusto (SQL/PostgreSQL), análise preditiva (Python/ML) e visualização executiva (Power BI e Streamlit)."
authors = [
    {name = "Deyved Antonio",email = "deyved.antonio@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0.2,<7.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "python-decouple (>=3.8,<4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.2"
pytest = "^9.0.2"
mkdocs = "^1.6.1"

